--- a/installer/resources/eepsite.help/help/index_de.html
+++ b/installer/resources/eepsite.help/help/index_de.html
@@ -16,12 +16,17 @@
 <a href="index_na.html"><img src="lib/cn.png" title="中文" alt="中文"></a> 
 <a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
 <a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
+<a href="index_na.html"><img src="lib/es.png" title="Español" alt="Español"></a>
 <a href="index_nl.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
 <a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
-<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
+<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a>
+<a href="index_na.html"><img src="lib/ir.png" title="Farsi" alt="Farsi"></a>
+<a href="index_na.html"><img src="lib/jp.png" title="Japanese" alt="Japanese"></a>
 </div>
+
+<h2>Quick Guide to Anonymous Webserving on I2P</h2>
 <p>Dies ist Ihre <strong>Eepseite</strong>, Ihre Web-Präsens über I2P. Editieren Sie einfach die Dateien unter 
-<em>~/.i2p/eepsite/docroot/</em> (Linux) oder <em>%APPDATA%\I2P\eepsite\docroot\</em> (Windows)
+<code>~/.i2p/eepsite/docroot/</code> (Linux) oder <code>%APPDATA%\I2P\eepsite\docroot\</code> (Windows)
 und nachdem Sie den Anweisungen weiter unten gefolgt sind, werden Sie –
 vertreten durch Ihre Eepseite – von anderen im I2P-Netz und, soweit
 verfügbar, über private „Out-Proxys“ weltweit auch im offenen Internet erreichbar sein.</p>
@@ -45,9 +50,9 @@ mitteilen, aber glücklicherweise bringt I2P bereits ein Adressbuch mit
 und hat verschiedene Wege, Ihre Eepsite bekannt zu machen.</p>
 
 
-<h3>Eine detaillierte Einführung</h3>
+<h2>Eine detaillierte Einführung</h2>
 
-<h4>Meine Eepseite</h4>
+<h2>Meine Eepseite</h2>
 
 <ol>
 <li>Wählen Sie einen eigenen Namen für Ihre Eepseite – nur in diesem
@@ -80,7 +85,7 @@ Ziele“ angezeigt.</li>
 
 
 
-<h4>Das Veröffentlichen vorbereiten</h4>
+<h2>Das Veröffentlichen vorbereiten</h2>
 
 <ol>
 <li>Heben Sie in der „<a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">Konfiguration</a>“
@@ -105,11 +110,11 @@ Adresse hat sich geändert.
 <br></li>
 <li>Bevor Sie der Welt von Ihrer neuen Eepseite berichten, sollte sie
 auch über ein wenig Inhalt verfügen. Begeben Sie sich in das
-Verzeichnis <em>„~/.i2p/eepsite/docroot/“</em> (Linux) oder <em>„%APPDATA%\I2P\eepsite\docroot\“</em> (Windows)
+Verzeichnis <code>~/.i2p/eepsite/docroot/</code> (Linux) oder <code>%APPDATA%\I2P\eepsite\docroot\</code> (Windows)
 und benennen Sie dieses Dokument von <em>„index.html“</em> in <em>„hilfe.html“</em> um, so können Sie später darauf zurückgreifen. Erstellen Sie Ihre eigene <em>„index.html“</em> und füllen diese mit Inhalten, Bildern oder was auch immer Sie anderen mitteilen wollen.</li>
 </ol>
 
-<h4><a name="AnkerDEOeA" id="AnkerDEOeA"></a>Die Eepseite öffentlich ankündigen</h4>
+<h2><a name="AnkerDEOeA" id="AnkerDEOeA"></a>Die Eepseite öffentlich ankündigen</h2>
 
 <ul>
 <li>Nun ist es an der Zeit, Ihre Eepsite in einem globalen I2P-Adressbuch, wie beispielsweise bei <a href="http://stats.i2p/i2p/addkey.html">stats.i2p</a>,
@@ -151,7 +156,7 @@ klappt, können anderen diese Möglichkeit auch nutzen. (Ersetzen Sie
 <br>
 <br></li>
 </ul></li>
-<li>Manche erkundigen sich auf Eepseitenlisten wie  <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> über neue Eepseiten; so könnten Sie an einige Besucher kommen. Aber es gibt weitere Wege, sich anzukündigen:
+<li>Manche erkundigen sich auf Eepseitenlisten wie  <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> oder <a href="http://perv.i2p">perv.i2p</a> über neue Eepseiten; so könnten Sie an einige Besucher kommen. Aber es gibt weitere Wege, sich anzukündigen:
 
 <ul>
 <li>Veröffentlichen Sie eine Nachricht im <a href="http://forum.i2p">I2P-Forum</a> unter <a href="http://forum.i2p/viewforum.php?f=16">Eepsite Announce</a></li>
@@ -179,5 +184,10 @@ Zeichenfolge, die nur aus wenigen, Codepage-unabhängigen ASCII-Zeichen
 besteht.
 </p><p class="footnote"><a class="footnum" name="fn.2" href="#fnr.2">2.</a> Anmerkung: Wenn dieses Vorgehen mit der Fehlermeldung „Invalid nonce. Are you being spoofed?“ quittiert wird, müssen <em>Cookies</em> im Browser erlaubt werden. Ist dies nicht möglich, können Sie mit einem Editor die Datei <em>„i2p/userhosts.txt“</em> bearbeiten und so die Adressen einfügen. <a href="http://sperrbezirk.i2p/Konqueror_Susi.html">Konqueror</a> ist etwas eigenwillig.
 </p><p class="footnote"><a class="footnum" name="fn.3" href="#fnr.3">3.</a> Gleiches wie unter <sup><a class="footref" name="fnr.2" href="#fn.2">2</a></sup> gilt für <em>„i2p/addressbook/subscriptions.txt“</em>.</p>
-</div></div> 
+
+<div class="notify">
+<b>Note:</b> This page, the website and the console all need translating into YOUR language if it's not already been done or in progress. Please consider helping the project grow by <a href="http://www.i2p2.i2p/getinvolved.html">volunteering your time</a> to translate. Contact the project via the IRC channel listed above. Thanks in advance!</div>
+<hr><div class="footnote">	
+Document last edited: November 2010.</div>
+</div></div>
 </body></html>
