--- a/installer/resources/eepsite.help/help/index_nl.html
+++ b/installer/resources/eepsite.help/help/index_nl.html
@@ -14,15 +14,18 @@
 <a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
 <a href="index_na.html"><img src="lib/cn.png" title="中文" alt="中文"></a> 
 <a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
-<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
+<a href="index_na.html"><img src="lib/es.png" title="Español" alt="Español"></a>
+<a href="index_na.html"><img src="lib/it.png" title="Italiano" alt="Italiano"></a>
 <a href="index_nl.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
 <a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
-<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
-
+<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a>
+<a href="index_na.html"><img src="lib/ir.png" title="Farsi" alt="Farsi"></a>
+<a href="index_na.html"><img src="lib/jp.png" title="Japanese" alt="Japanese"></a>
 </div>
 <h2>Korte Handleiding voor Anoniem Webhosten op I2P</h2>
 
- <p>Dit is je eepsite, je eigen anonieme I2P webserver - pas de bestanden onder ~/.i2p/eepsite/docroot/ (Linux) of %APPDATA%\I2P\eepsite\docroot\ (Windows) simpelweg aan 
+ <p>Dit is je eepsite, je eigen anonieme I2P webserver - pas de bestanden onder <code>~/.i2p/eepsite/docroot/</code> (Linux) of <code>%APPDATA%\I2P\eepsite\docroot\</code> (Windows) simpelweg aan 
  en ze zijn bereikbaar door anderen zodra je onderstaande instructies hebt opgevolgd.
  In I2P worden eepsites aangeduid met een 'destination', dit is een erg lange Base64 string.
  (De 'destination' is vergelijkbaar met een IP adres en wordt getoond op de eepsite's I2PTunnel 
@@ -44,7 +47,7 @@
  <li>Kies een naam voor je eepsite (<i>mijnsite</i>.i2p). Gebruik alleen kleine letters.
      Kijk eerst 
      <a href="http://127.0.0.1:7657/susidns/addressbook.jsp?book=router&filter=none">hier</a>,
-     in het adresboek van je router of in het bestand i2p/hosts.txt of de naam nog beschikbaar is.
+     in het adresboek van je router of in het bestand <code>i2p/hosts.txt</code> of de naam nog beschikbaar is.
      Voer de nieuwe naam voor je eepsite in op de 
      <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite i2ptunnel configuratie pagina</a>
      onder "Website naam". Dit vervangt de standaard "mysite.i2p".
@@ -64,7 +67,7 @@
      Klik "Toevoegen" om de destination aan je adresboek toe te voegen.
  <li>In je browser, voel je eepsite naam in (<i>mijnsite</i>.i2p) en je komt hier hopelijk weer terug.
  <li>Voordat je de rest van de wereld over je nieuwe eepsite vertelt, zorg eerst voor wat content.
-     Ga naar ~/.i2p/eepsite/docroot/ (Linux) of %APPDATA%\I2P\eepsite\docroot\ (Windows) en vervang de index.html verwijs pagina met je eigen content. Virtual folders werken, dus kan je bestanden vanuit een subdirectory hosten zonder dat je een pagina met links naar deze files moet maken. Mocht je een template nodig hebben voor een basis site, weer vrij om <a href="pagetemplate.html">deze pagina</a> en <a href="lib/">deze content</a> te gebruiken en aan te passen!
+     Ga naar <code>~/.i2p/eepsite/docroot/</code> (Linux) of <code>%APPDATA%\I2P\eepsite\docroot\</code> (Windows) en vervang de index.html verwijs pagina met je eigen content. Virtual folders werken, dus kan je bestanden vanuit een subdirectory hosten zonder dat je een pagina met links naar deze files moet maken. Mocht je een template nodig hebben voor een basis site, weer vrij om <a href="pagetemplate.html">deze pagina</a> en <a href="lib/">deze content</a> te gebruiken en aan te passen!
 </ul>
 <h2>Registreer je eigen .I2P Domein</h2><ul>
   <li>Nu is het tijd om je eepsite toe te voegen aan een I2P adresboek gehost door een site
@@ -90,7 +93,7 @@
      in je browser.
      Zodra dit werkt kan je anderen hierover vertellen.
  <li>Sommigen kijken op eepsite lijsten zoals
-     <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> voor nieuwe eepsites, dus kan je zo een aantal bezoekers krijgen.
+     <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> of <a href="http://perv.i2p">perv.i2p</a> voor nieuwe eepsites, dus kan je zo een aantal bezoekers krijgen.
      Maar er zijn genoeg andere manieren om je eepsite te promoten. Hier zijn er een aantal:
      <ul>
      <li>Plaats een bericht op het <a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce forum</a>
@@ -110,7 +113,7 @@
  </ul><div class="notify">
 <b>Noot:</b> Deze pagina, de website en console moeten allemaal vertaald worden in JOUW eigen taal, mocht dit nog niet gedaan zijn. Help de groei van dit project door <a href="http://www.i2p2.i2p/getinvolved.html">bij te dragen</a> aan de vertaling. Neem contact op met het project via het hierboven genoemde IRC kanaal. Alvast bedankt!</div>
 <hr><div class="footnote">	
-Document laatst gewijzigd: November 2009.</div>
+Document laatst gewijzigd: November 2010.</div>
 </div></div>
  </body>
 </html>
