--- a/installer/resources/eepsite.help/help/index_sv.html
+++ b/installer/resources/eepsite.help/help/index_sv.html
@@ -14,11 +14,14 @@
 <a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
 <a href="index_na.html"><img src="lib/cn.png" title="中文" alt="中文"></a> 
 <a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
-<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
+<a href="index_na.html"><img src="lib/es.png" title="Español" alt="Español"></a>
+<a href="index_na.html"><img src="lib/it.png" title="Italiano" alt="Italiano"></a>
 <a href="index_nl.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
 <a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
-<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
-
+<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a>
+<a href="index_na.html"><img src="lib/ir.png" title="Farsi" alt="Farsi"></a>
+<a href="index_na.html"><img src="lib/jp.png" title="Japanese" alt="Japanese"></a>
 </div>
 <h2>Snabb vägledning till anonym webbservning på I2P</h2>
 
@@ -104,7 +107,7 @@
      i din webbläsare.
      Så snart som det funkar kan du berätta för andra att de ska använda det.
  <li>Vissa människor kolla på eepsajtlistor som
-     <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> efter nya eepsajter,
+     <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> eller <a href="http://perv.i2p">perv.i2p</a> efter nya eepsajter,
      så att du kan börja få ett par besökare. Men det finns massor av sätt att berätta för folk.
      Här är en rad idëer:
      <ul>
@@ -131,7 +134,7 @@
  <div class="notify">
 <b>Note:</b> This page, the website and the console all need translating into YOUR language if it's not already been done or in progress. Please consider helping the project grow by <a href="http://www.i2p2.i2p/getinvolved.html">volunteering your time</a> to translate. Contact the project via the IRC channel listed above. Thanks in advance!</div>
 <hr><div class="footnote">
-Document last edited: August 2010.</div>
+Document last edited: November 2010.</div>
 </div></div>
  </body>
 </html>
