--- a/installer/resources/eepsite.help/help/index_sv.html
+++ b/installer/resources/eepsite.help/help/index_sv.html
@@ -20,8 +20,8 @@
 <a href="index_nl.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
 <a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
 <a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a>
-<a href="index_na.html"><img src="lib/ir.png" title="Farsi" alt="Farsi"></a>
-<a href="index_na.html"><img src="lib/jp.png" title="Japanese" alt="Japanese"></a>
+<a href="index_na.html"><img src="lib/ir.png" title="فارسی" alt="فارسی"></a>
+<a href="index_na.html"><img src="lib/jp.png" title="日本語" alt="日本語"></a>
 </div>
 <h2>Snabb vägledning till anonym webbservning på I2P</h2>
 
