removed some strange-looking strings in French router console translation that stroke my eye, have not read through all of it tho; change some capitalizations in de and de eepsite
Monotone-Parent: 63ea8fc7575eb9959ac1611f73ea41af4ae0dc91
Monotone-Revision: f5d8fb56c10dc0007901ed64a84a5cba32a3ca92

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-19T19:17:07
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/help/index_de.html
+++ b/installer/resources/eepsite.help/help/index_de.html
@@ -24,7 +24,7 @@
 <a href="index_na.html"><img src="lib/jp.png" title="日本語" alt="日本語"></a>
 </div>
 
-<h2>Quick Guide to Anonymous Webserving on I2P</h2>
+<h2>Kurzanleitung zum anonymen Hosten von Webseiten in I2P</h2>
 <p>Dies ist Ihre <strong>Eepseite</strong>, Ihre Web-Präsens über I2P. Editieren Sie einfach die Dateien unter 
 <code>~/.i2p/eepsite/docroot/</code> (Linux) oder <code>%APPDATA%\I2P\eepsite\docroot\</code> (Windows)
 und nachdem Sie den Anweisungen weiter unten gefolgt sind, werden Sie –
@@ -40,6 +40,7 @@ bindet.
 Sie können Ihre Eepseite, nachdem sie gestartet wurde, lokal unter <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a> erreichen.</p>
 
 <p>Es folgt eine schrittweise Anleitung für das Starten Ihrer neuen Eepseite und dessen Ankündigung in der I2P-Gemeinde.</p>
+<h2>Eine detaillierte Einführung</h2>
 
 <p>In der Grundeinstellung ist Ihre Eepseite nicht eingeschaltet.
 Auch nachdem sie gestartet wurde, ist es für andere Teilnehmer immer
@@ -50,9 +51,6 @@ mitteilen, aber glücklicherweise bringt I2P bereits ein Adressbuch mit
 und hat verschiedene Wege, Ihre Eepsite bekannt zu machen.</p>
 
 
-<h2>Eine detaillierte Einführung</h2>
-
-<h2>Meine Eepseite</h2>
 
 <ol>
 <li>Wählen Sie einen eigenen Namen für Ihre Eepseite – nur in diesem
