further changes to eepsite, e.g. s/link drücken/link klicken
Monotone-Parent: 8e7cc8878738f9fd11bbaabc542793478a8a5c0d
Monotone-Revision: 61d113dbef259d4f02a8720b1841a7ddeaa8036d

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-21T12:39:37
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/help/index.html
+++ b/installer/resources/eepsite.help/help/index.html
@@ -112,7 +112,7 @@
  <li>If you have any questions, the following places are available for support:
 <ul>
  <li>Our IRC support channel: <ul><li><a href="irc://irc.freenode.net/i2p">#i2p on Freenode</a> 
- <li>Anonymously via your resident <a href="irc://127.0.0.1:6668/i2p">I2P IRC tunnel</a>.</ul>
+ <li>Anonymously via your resident <a href="irc://127.0.0.1:6668/i2p-help">I2P IRC tunnel</a>.</ul>
      <li><a href="http://forum.i2p/viewforum.php?f=10">The technical problems section</a> on
      <a href="http://forum.i2p/">forum.i2p</a>.</ul>
  </ul><div class="notify">
