--- a/installer/resources/eepsite.help/help/index_de.html
+++ b/installer/resources/eepsite.help/help/index_de.html
@@ -25,7 +25,7 @@
 </div>
 
 <h2>Kurzanleitung zum anonymen Hosten von Webseiten in I2P</h2>
-<p>Dies ist Ihre <strong>Eepseite</strong>, Ihre Web-Präsens über I2P. Editieren Sie einfach die Dateien unter 
+<p>Dies ist Ihre <strong>Eepseite</strong>, Ihre Web-Präsens im I2P. Editieren Sie einfach die Dateien unter 
 <code>~/.i2p/eepsite/docroot/</code> (Linux) oder <code>%APPDATA%\I2P\eepsite\docroot\</code> (Windows)
 und nachdem Sie den Anweisungen weiter unten gefolgt sind, werden Sie –
 vertreten durch Ihre Eepseite – von anderen im I2P-Netz und, soweit
@@ -41,6 +41,7 @@ Sie können Ihre Eepseite, nachdem sie gestartet wurde, lokal unter <a href="htt
 
 <p>Es folgt eine schrittweise Anleitung für das Starten Ihrer neuen Eepseite und dessen Ankündigung in der I2P-Gemeinde.</p>
 <h2>Eine detaillierte Einführung</h2>
+<h4>1. Starten der Eepseite</h4>
 
 <p>In der Grundeinstellung ist Ihre Eepseite nicht eingeschaltet.
 Auch nachdem sie gestartet wurde, ist es für andere Teilnehmer immer
@@ -67,7 +68,7 @@ Vorgabe „mysite.i2p“ mit Ihrem Wunschnamen. Optional geben Sie im Feld
 <li>Wenn Sie möchten, dass Ihre Eepsite automatisch gestartet wird, kreuzen Sie das Feld „Automatischer Start:“ an.
 <br>
 <br></li>
-<li>Durch Drücken des Links „zum lokalen Adressbuch hinzufügen“ gleich unterhalb
+<li>Durch Klicken auf den Link „zum lokalen Adressbuch hinzufügen“ gleich unterhalb
 Ihres Schlüssels (Feld „lokales Ziel“) wird dieser in
 Ihr <em>privates</em> Adressbuch geschrieben (<em>i2p/privatehosts.txt</em>).
 <br>
@@ -83,7 +84,7 @@ Ziele“ angezeigt.</li>
 
 
 
-<h2>Das Veröffentlichen vorbereiten</h2>
+<h4>2. Das Veröffentlichen vorbereiten</h4>
 
 <ol>
 <li>Heben Sie in der „<a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">Konfiguration</a>“
@@ -112,7 +113,7 @@ Verzeichnis <code>~/.i2p/eepsite/docroot/</code> (Linux) oder <code>%APPDATA%\I2
 und benennen Sie dieses Dokument von <em>„index.html“</em> in <em>„hilfe.html“</em> um, so können Sie später darauf zurückgreifen. Erstellen Sie Ihre eigene <em>„index.html“</em> und füllen diese mit Inhalten, Bildern oder was auch immer Sie anderen mitteilen wollen.</li>
 </ol>
 
-<h2><a name="AnkerDEOeA" id="AnkerDEOeA"></a>Die Eepseite öffentlich ankündigen</h2>
+<h4><a name="AnkerDEOeA" id="AnkerDEOeA"></a>3. Die Eepseite öffentlich ankündigen</h4>
 
 <ul>
 <li>Nun ist es an der Zeit, Ihre Eepsite in einem globalen I2P-Adressbuch, wie beispielsweise bei <a href="http://stats.i2p/i2p/addkey.html">stats.i2p</a>,
@@ -170,8 +171,9 @@ Sie Ihren Schlüssel erfolgreich beim „Schlüssel-Dienst“ eingetragen und
 ihn mittels „jump“-Dienst getestet haben, sollte nach 24 Stunden
 Wartezeit dieses Vorgehen nicht nötig sein.
 <br>
-<br></li>
-<li>Sollten Sie Fragen haben, benutzen Sie den IRC-Kanal #i2p oder die technische Abteilung im <a href="http://forum.i2p">I2P-Forum</a>!</li>
+<br></li></ul>
+<h2>Hilfe</h2>
+<ul><li>Sollten Sie Fragen haben, kommen Sie in den IRC-Kanal <a href="irc:localhost:6668/i2p-help">#i2p-help</a> oder konsultieren Sie die technische Abteilung im <a href="http://forum.i2p">I2P-Forum</a>!</li>
 </ul>
 
 
@@ -184,8 +186,8 @@ besteht.
 </p><p class="footnote"><a class="footnum" name="fn.3" href="#fnr.3">3.</a> Gleiches wie unter <sup><a class="footref" name="fnr.2" href="#fn.2">2</a></sup> gilt für <em>„i2p/addressbook/subscriptions.txt“</em>.</p>
 
 <div class="notify">
-<b>Note:</b> This page, the website and the console all need translating into YOUR language if it's not already been done or in progress. Please consider helping the project grow by <a href="http://www.i2p2.i2p/getinvolved.html">volunteering your time</a> to translate. Contact the project via the IRC channel listed above. Thanks in advance!</div>
+<b>Hinweis:</b> Diese Seite, die Weibseite sowie die Routerkonsole müssen alle in IHRE Sprache übersetzt werden, falls dies nicht bereits geschehen ist oder gerade stattfindet. Helfen Sie dem Projekt zu wachsen, indem Sie <a href="http://www.i2p2.i2p/getinvolved.html">helfen</a> (beispielsweise durch Übersetzungen)! Kontaktieren Sie uns über den oben erwähnten IRC-Kanal! Vielen Dank!</div>
 <hr><div class="footnote">	
-Document last edited: November 2010.</div>
+Dieses Dokument wurde zuletzt im November 2010 aktualisiert.</div>
 </div></div>
 </body></html>
