* Console:       - Convert GraphHelper to a FormHandler       - Require POST for all forms       - Change the way we store the Writer to prevent problems       - Fix bonus setting on configpeer.jsp       - More ".jsp" removal
Monotone-Parent: e53d8bdf1cbb95667ba07225591a86e7cdf4a953
Monotone-Revision: 91723b126ca08e17a7c0d8c1c1f84468690250f8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-21T20:46:48
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/i2psnark/index.html
+++ b/apps/routerconsole/jsp/i2psnark/index.html
@@ -3,6 +3,6 @@
 <meta http-equiv="pragma" content="no-cache" />
 </head>
 <body>
-The I2PSnark Anonymous BitTorrent Client is not running. Please visit the <a href="/configclients.jsp">config clients page</a>
+The I2PSnark Anonymous BitTorrent Client is not running. Please visit the <a href="/configclients#webapp">config clients page</a>
 to start it.
 </body></html>
