--- a/installer/resources/readme/readme_es.html
+++ b/installer/resources/readme/readme_es.html
@@ -1,6 +1,15 @@
 <div lang="es">
 <div align="right">
-<div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="中文" alt="中文"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> <a href="/index.jsp?lang=es"><img src="/flags.jsp?c=es" title="Espa&ntilde;ol" alt="Espa&ntilde;ol"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+<div class="langbox" align="right">
+	<a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
+	<a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="中文" alt="中文"></a> 
+	<a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> 
+	<a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> 
+	<a href="/index.jsp?lang=es"><img src="/flags.jsp?c=es" title="Espa&ntilde;ol" alt="Espa&ntilde;ol"></a> 
+	<a href="/index.jsp?lang=br"><img src="/flags.jsp?c=br" title="Português" alt="Português"></a> 
+	<a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
+	<a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> 
+	<a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div></div>
 <div class="welcome"><h2>&iexcl;Bienvenido a I2P!</h2></div>
 <p>Si acabas de arrancar I2P los n&uacute;meros a la derecha de "Active:" deber&iacute;an subir en los pr&oacute;ximos minutos y luego ver&aacute;s all&iacute; una Destinaci&oacute;n llamada "shared clients" <br>(si no, <a href="#trouble">&iexcl;mira abajo!</a>) Apenas aparezca esto, puedes:</p>
@@ -8,14 +17,14 @@
  <li><b>visitar p&aacute;ginas I2P ("Eepsites")</b> - En I2P hay p&aacute;ginas web an&oacute;nimas: 
      Configura tu navegador web para usar el <b>proxy HTTP: 127.0.0.1 puerto 4444</b>, luego visita una p&aacute;gina I2P:<br>
      <ul class="links">
-         <li><a href="http://forum.i2p/">forum.i2p</a>: Conexi&oacute;n segura y an&oacute;nima a <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: conexi&oacute;n segura y an&oacute;nima a <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a> y el espejo <a href="http://i2p-projekt.i2p/index_de.html">i2p-projekt.i2p</a>:
-              Conexiones seguras y an&oacute;nimas a <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
-         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: P&aacute;gina de b&uacute;squeda para p&aacute;ginas I2P</li>
-         <li><a href="http://ugha.i2p/">ugha.i2p</a>: P&aacute;gina de Ugha; un wiki p&uacute;blico con muchos enlaces</li>
-         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: un proxy para acceder Freenet</li>
-	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Archivo de software e informaciones sobre I2P (con aplicaciones de BitTorrent, iMule, I2PFox, I2P-Messenger, ...)</li>
-         <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Pastebin an&oacute;nimo</li>
+              conexiones seguras y an&oacute;nimas a <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: p&aacute;gina de b&uacute;squeda para p&aacute;ginas I2P</li>
+         <li><a href="http://ugha.i2p/">ugha.i2p</a>: p&aacute;gina de Ugha; un wiki p&uacute;blico con muchos enlaces</li>
+         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: un proxy para acceder a Freenet</li>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: archivo de software e informaciones sobre I2P (con aplicaciones de BitTorrent, iMule, I2PFox, I2P-Messenger, ...)</li>
+         <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: pastebin an&oacute;nimo</li>
 	</ul><br />
      Hay muchas p&aacute;ginas I2P m&aacute;s - simplemente &iexcl;sigue los enlaces que encuentres, pon marcadores para tus favoritos y vis&iacute;talos frecuentemente!</
      li><br />
