--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -18,14 +18,14 @@
  <li><b>"Eepseiten" besuchen</b> - In I2P gibt es anonym gehostete Websites: 
      Konfiguriere Deinen Browser, &uuml;ber den <b>HTTP-Proxy: 127.0.0.1 Port 4444</b> zu surfen, dann besuche eine Eepseite:<br>
      <ul class="links">
-         <li><a href="http://forum.i2p/">forum.i2p</a>: Eine sichere und anonyme Verbindung zu <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: sichere und anonyme Verbindung zu <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a> und der Spiegel <a href="http://i2p-projekt.i2p/index_de.html">i2p-projekt.i2p</a>:
-              Sichere und anonyme Verbindungen zu <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
-         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepseiten</li>
+              sichere und anonyme Verbindungen zu <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: anonym gehostete Suchseite f&uuml;r Eepseiten</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepseite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: ein Freenet-Proxy</li>
 	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Softwarearchiv und Informationen zu I2P (mit BitTorrent-Klienten, iMule, I2PFox, I2P-Messenger, ...)</li>
-         <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Anonymer Pastebin</li>
+         <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: anonymer Pastebin</li>
 	</ul><br />
      Es gibt viele andere Eepseiten - folge einfach den Links, die du findest,
      setze Lesezeichen f&uuml;r Deine Favoriten, und besuche sie oft!</li><br />
