--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -22,20 +22,21 @@ up, you can:</p>
     - tell your browser to use the <b>HTTP proxy at 127.0.0.1 port 4444</b>, then 
     browse to an eepsite:<br>
     <ul class="links">
-      <li><a href="http://forum.i2p/">forum.i2p</a>: a secure 
-        and anonymous connection to <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
-      <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> and 
-        mirror <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>: secure and 
-        anonymous connections to <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
-      <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an 
+      <li><a href="http://forum.i2p/" target="_blank">forum.i2p</a>: a secure 
+        and anonymous connection to <a href="http://forum.i2p2.de/" target="_blank">forum.i2p2.de</a></li>
+      <li><a href="http://www.i2p2.i2p/" target="_blank">www.i2p2.i2p</a> and 
+        mirror <a href="http://i2p-projekt.i2p" target="_blank">i2p-projekt.i2p</a>: secure and 
+        anonymous connections to <a href="http://www.i2p2.de/" target="_blank">www.i2p2.de</a></li>
+      <li><a href="http://eepsites.i2p/" target="_blank">eepsites.i2p</a>: an 
         anonymously hosted search engine of eepsites</li>
-      <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, 
+      <li><a href="http://perv.i2p" target="_blank">perv.i2p</a> &amp; <a href="http://inproxy.tino.i2p/status.php" target="_blank">inproxy.tino.i2p</a>: list of active eepsites with uptime statistics</li>
+      <li><a href="http://ugha.i2p/" target="_blank">ugha.i2p</a>: ugha's eepsite, 
         a wiki that anyone can edit, and lots of links</li>
-      <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
+      <li><a href="http://fproxy.tino.i2p" target="_blank">fproxy.tino.i2p</a>: 
         Freenet proxy</li>
-      <li><a href="http://echelon.i2p">echelon.i2p</a>: software 
+      <li><a href="http://echelon.i2p" target="_blank">echelon.i2p</a>: software 
         archive (I2PFox, iMule, I2P-Messenger, ... ) and information for I2P</li>
-      <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: secure and 
+      <li><a href="http://paste.i2p2.i2p" target="_blank">paste.i2p2.i2p</a>: secure and 
         anonymous paste service.</li>
     </ul><br>
       There are many more eepsites - just follow the links from the ones you see, 
@@ -46,44 +47,45 @@ up, you can:</p>
         "outproxy" in I2P hooked up to your own HTTP proxy on port 4444 - simply 
         set your browser's proxy to use it (as above) and go to any normal URL 
         - your requests will be bounced through the I2P network.</li>
-      <li class="tidylist"><b>transfer files</b> - there is an integrated <a href="/i2psnark">port</a> 
-        of the <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a> 
+      <li class="tidylist"><b>transfer files</b> - there is an integrated <a href="/i2psnark" target="_blank">port</a> 
+        of the <a href="http://www.klomp.org/snark/" target="_blank">Snark</a> <a href="http://www.bittorrent.com/" target="_blank">BitTorrent</a> 
         client.</li>
       <li class="tidylist"><b>use anonymous email</b> - postman has created a 
         mail system compatible with normal mail clients (POP3 / SMTP) that allows 
         email within I2P as well as mail from and to the normal internet! get 
-        your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>. We 
-        bundle <a href="/susimail/susimail">susimail</a>, a web based anonymity-oriented 
-        pop3/smtp client configured to access postman's mail services. 
-	<br>Alternatively, you can try out our new serverless, end-to-end encrypted e-mail system 
-	<a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a> 
+        your account at <a href="http://hq.postman.i2p/" target="_blank">hq.postman.i2p</a>. We 
+        bundle <a href="/susimail/susimail" target="_blank">susimail</a>, a web based anonymity-oriented 
+        pop3/smtp client configured to access postman's mail services.</li> 
+	 <li class="tidylist"><b>peer to peer, serverless e-mail</b> - You can also try out a new serverless, end-to-end encrypted e-mail system 
+	<a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/" target="_blank">I2P-Bote</a> 
 	(with webinterface), installable as a plugin.<br></li>
       <li class="tidylist"><b>chat anonymously</b> - fire up your own IRC client 
         and connect to the server at <b>127.0.0.1 port 6668</b>. This points at 
         one of two anonymously hosted IRC servers, but neither you nor they know 
         where the other is.</li>
-      <li class="tidylist"><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/">Syndie</a></li>
+      <li class="tidylist"><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/" target="_blank">Syndie</a></li>
+      <li class="tidylist"><b>install plugins</b> - browse the plugins and related info on <a href="http://i2plugins.i2p" target="_blank">i2plugins.i2p</a></li>
       <li class="tidylist">and lots more</li>
     </ul>
 </ul>
 <h2>Want your own eepsite?</h2>
-<p>We've bundled some software to let you run your own eepsite - a <a href="http://jetty.mortbay.org/">Jetty</a> 
-  instance listening on <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. 
+<p>We've bundled some software to let you run your own eepsite - a <a href="http://jetty.mortbay.org/" target="_blank">Jetty</a> 
+  instance listening on <a href="http://127.0.0.1:7658/" target="_blank">http://127.0.0.1:7658/</a>. 
   Simply place your files in the <code>eepsite/docroot/</code> directory (or place 
   any standard JSP/Servlet <code>.war</code> files under <code>eepsite/webapps</code>, 
   or standard CGI script under <code>eepsite/cgi-bin</code>) and they'll show 
-  up. After starting up an <a href="/i2ptunnel/">eepsite tunnel</a> pointing at 
+  up. After starting up an <a href="/i2ptunnel/" target="_blank">eepsite tunnel</a> pointing at 
   it, your eepsite will be visible to others. Detailed instructions for starting 
-  your eepsite are on <a href="http://127.0.0.1:7658/">your temporary eepsite 
+  your eepsite are on <a href="http://127.0.0.1:7658/" target="_blank">your temporary eepsite 
   page</a>. </p>
 <h2><a name="trouble">Troubleshooting</a></h2>
 <p>Be patient - I2P may be slow to start the first time as it searches for peers. 
   If, after 30 minutes, your Active: connected/recent count has less than 10 connected 
   peers, you should open I2P's port on your firewall for better connectivity. If 
-  you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>), 
+  you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/" target="_blank">www.i2p2.i2p</a>), 
   be sure your browser proxy is set to 127.0.0.1 port 4444. You may also want 
-  to review the information on the <a href="http://www.i2p2.i2p/">I2P website</a>, 
-  post up messages to the <a href="http://forum.i2p2.de/">I2P discussion forum</a>, 
+  to review the information on the <a href="http://www.i2p2.i2p/" target="_blank">I2P website</a>, 
+  post up messages to the <a href="http://forum.i2p2.de/" target="_blank">I2P discussion forum</a>, 
   or swing by
   <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> or <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
   on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, 
