Readme.html: finessing.
Monotone-Parent: 67473c50ac109642ebd17a19306c690285321279
Monotone-Revision: ebe06483eadca594ccf2447cd27879ca6ac9a45e

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-23T20:40:12
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -56,16 +56,15 @@ up, you can:</p>
         your account at <a href="http://hq.postman.i2p/" target="_blank">hq.postman.i2p</a>. We 
         bundle <a href="/susimail/susimail" target="_blank">susimail</a>, a web based anonymity-oriented 
         pop3/smtp client configured to access postman's mail services.</li> 
-	 <li class="tidylist"><b>peer to peer, serverless e-mail</b> - You can also try out a new serverless, end-to-end encrypted e-mail system 
-	<a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/" target="_blank">I2P-Bote</a> 
+	 <li class="tidylist"><b>serverless e-mail</b> - there is also <a href="http://i2pbote.i2p/" target="_blank">I2P-Bote</a>, a new serverless, end-to-end encrypted e-mail system.
 	(with webinterface), installable as a plugin.<br></li>
       <li class="tidylist"><b>chat anonymously</b> - fire up your own IRC client 
         and connect to the server at <b>127.0.0.1 port 6668</b>. This points at 
         one of two anonymously hosted IRC servers, but neither you nor they know 
         where the other is.</li>
       <li class="tidylist"><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/" target="_blank">Syndie</a></li>
-      <li class="tidylist"><b>install plugins</b> - browse the plugins and related info on <a href="http://i2plugins.i2p" target="_blank">i2plugins.i2p</a></li>
-      <li class="tidylist">and lots more</li>
+      <li class="tidylist"><b>install plugins</b> - browse the plugins and related info on <a href="http://i2plugins.i2p" target="_blank">i2plugins.i2p</a>.</li>
+      <li class="tidylist">and lots more&hellip;</li>
     </ul>
 </ul>
 <h2>Want your own eepsite?</h2>
