Readme.html: Remove links to tino/perv's eepsite status sites (requested by zzz); more tuneups.
Monotone-Parent: ebe06483eadca594ccf2447cd27879ca6ac9a45e
Monotone-Revision: f0bdf326429b339b8da09b24022d18142bc487c0

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-23T21:30:08
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -29,13 +29,12 @@ up, you can:</p>
         anonymous connections to <a href="http://www.i2p2.de/" target="_blank">www.i2p2.de</a></li>
       <li><a href="http://eepsites.i2p/" target="_blank">eepsites.i2p</a>: an 
         anonymously hosted search engine of eepsites</li>
-      <li><a href="http://perv.i2p" target="_blank">perv.i2p</a> &amp; <a href="http://inproxy.tino.i2p/status.php" target="_blank">inproxy.tino.i2p</a>: list of active eepsites with uptime statistics</li>
       <li><a href="http://ugha.i2p/" target="_blank">ugha.i2p</a>: ugha's eepsite, 
         a wiki that anyone can edit, and lots of links</li>
       <li><a href="http://fproxy.tino.i2p" target="_blank">fproxy.tino.i2p</a>: 
         Freenet proxy</li>
       <li><a href="http://echelon.i2p" target="_blank">echelon.i2p</a>: software 
-        archive (I2PFox, iMule, I2P-Messenger, ... ) and information for I2P</li>
+        archive (I2PFox, iMule, I2P-Messenger etc) and information about I2P including a beginner's guide.</li>
       <li><a href="http://paste.i2p2.i2p" target="_blank">paste.i2p2.i2p</a>: secure and 
         anonymous paste service.</li>
     </ul><br>
@@ -56,8 +55,7 @@ up, you can:</p>
         your account at <a href="http://hq.postman.i2p/" target="_blank">hq.postman.i2p</a>. We 
         bundle <a href="/susimail/susimail" target="_blank">susimail</a>, a web based anonymity-oriented 
         pop3/smtp client configured to access postman's mail services.</li> 
-	 <li class="tidylist"><b>serverless e-mail</b> - there is also <a href="http://i2pbote.i2p/" target="_blank">I2P-Bote</a>, a new serverless, end-to-end encrypted e-mail system.
-	(with webinterface), installable as a plugin.<br></li>
+	 <li class="tidylist"><b>serverless e-mail</b> - there's also <a href="http://i2pbote.i2p/" target="_blank">I2P-Bote</a>, a new serverless, end-to-end encrypted e-mail system (with web interface), installable as a plugin.<br></li>
       <li class="tidylist"><b>chat anonymously</b> - fire up your own IRC client 
         and connect to the server at <b>127.0.0.1 port 6668</b>. This points at 
         one of two anonymously hosted IRC servers, but neither you nor they know 
