br and es readme tweaks
Monotone-Parent: f0bdf326429b339b8da09b24022d18142bc487c0
Monotone-Revision: eeae620a013c7cf75a7be0f24e08b37cf868af42

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-24T22:34:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme_br.html
+++ b/installer/resources/readme/readme_br.html
@@ -1,4 +1,4 @@
-<div lang="es">
+<div lang="br">
 <div align="right">
 <div class="langbox" align="right">
 	<a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
@@ -11,8 +11,8 @@
 	<a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> 
 	<a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div></div>
-<div class="welcome"><h2>Bemvindo a I2P!</h2></div>
-<p>Si você acaba de iniciar I2P os n&uacute;meros ao lado direito de "Active:" deberiam subir nos seguintes minutos e logo la ver&aacute; uma Destinacião chamada "shared clients" <br>(se não, <a href="#trouble">veija embaixo!</a>) Enquanto apareça isto, você pode:</p>
+<div class="welcome"><h2>Bem-vindo a I2P!</h2></div>
+<p>Si você acaba de iniciar I2P os n&uacute;meros ao lado direito de "Active:" deberiam subir nos seguintes minutos e logo la ver&aacute; uma Destinacão chamada "shared clients" <br>(se não, <a href="#trouble">veija embaixo!</a>) Enquanto apareça isto, você pode:</p>
 <ul>
  <li><b>visitar p&aacute;ginas I2P ("Eepsites")</b> - Na rede I2P tem p&aacute;ginas web anônimas: 
      Configure o seu navegador web para usar o <b>proxy HTTP: 127.0.0.1 porto 4444</b>, logo visite uma p&aacute;gina I2P:<br>
