--- a/installer/resources/readme/readme_br.html
+++ b/installer/resources/readme/readme_br.html
@@ -12,30 +12,30 @@
 	<a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div></div>
 <div class="welcome"><h2>Bem-vindo a I2P!</h2></div>
-<p>Si você acaba de iniciar I2P os n&uacute;meros ao lado direito de "Active:" deberiam subir nos seguintes minutos e logo la ver&aacute; uma Destinacão chamada "shared clients" <br>(se não, <a href="#trouble">veija embaixo!</a>) Enquanto apareça isto, você pode:</p>
+<p>Si você acaba de iniciar I2P, os n&uacute;meros à esquerda ao lado direito de "Active:" deberiam subir nos seguintes minutos e logo lá ver&aacute; uma Destinação chamada "shared clients". (se não, <a href="#trouble">veija embaixo!</a>) <br>Assim que apareça isto, você pode:</p>
 <ul>
  <li><b>visitar p&aacute;ginas I2P ("Eepsites")</b> - Na rede I2P tem p&aacute;ginas web anônimas: 
      Configure o seu navegador web para usar o <b>proxy HTTP: 127.0.0.1 porto 4444</b>, logo visite uma p&aacute;gina I2P:<br>
      <ul class="links">
-         <li><a href="http://forum.i2p/">forum.i2p</a>: coneçião segura e anônima para <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: coneção segura e anônima para <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a> e o espelho <a href="http://i2p-projekt.i2p/index_de.html">i2p-projekt.i2p</a>:
               coneções seguras e anônimas para <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
-         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: p&aacute;gina de b&uacute;scador para as p&aacute;ginas I2P</li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: b&uacute;scador para as p&aacute;ginas I2P</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: p&aacute;gina de Ugha; um wiki p&uacute;blico com muitos links</li>
-         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: um proxy para acceder à Freenet</li>
+         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: um proxy para acessar à Freenet</li>
 	 <li><a href="http://echelon.i2p">echelon.i2p</a>: arquivo de software e informações sobre I2P (com aplicações de BitTorrent, iMule, I2PFox, I2P-Messenger, ...)</li>
-         <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: pastebin an&oacute;nimo</li>
+         <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: pastebin anônimo</li>
 	</ul><br />
-     Ha muitas mais p&aacute;ginas I2P - simplesmente segue os links que encontre, ponhe marcadores para os seu favoritos e vis&iacute;te-los freqüentemente!</
+     Ha muitas mais p&aacute;ginas I2P - simplesmente segue os links que encontre, ponhe marcadores para os seus favoritos e vis&iacute;te-los freqüentemente!</
      li><br />
- <li class="tidylist"><b>navegar na internet</b> - I2P dispoe de um "Outproxy" http - para usâ-lo, tamb&eacute;m pode empregar o proxy http no porto 4444 - Se configurar o seu navegador web para usar este proxy, pode visitar as p&aacute;ginas web de maneira anônima. O trânsito ser&aacute; roteado atravez da rede I2P.</li>
+ <li class="tidylist"><b>navegar na internet</b> - I2P dispõe de um "outproxy" http - para usâ-lo, tamb&eacute;m pode empregar o proxy http no porto 4444 - Se configurar o seu navegador web para usar este proxy, pode visitar as p&aacute;ginas web de maneira anônima e o trânsito ser&aacute; roteado atravez da rede I2P.</li>
  <li class="tidylist"><b>trocar dados</b> - Ha uma <a href="i2psnark/">adaptação</a> para I2P da aplicação <a href="http://www.bittorrent.com/">BitTorrent</a> 
      <a href="http://www.klomp.org/snark/">Snark</a>.</li>
- <li class="tidylist"><b>correio eletrônico anônimo</b> - Postman fez um sistema de correio eletrônico que é compatível com as aplicações de correio eletrônico comunes (POP3/SMTP), o qual permite de enviar correios eletrônicos tanto dentro de I2P como também receber e mandar correios desde a / para a internet. Pode registrar a sua conta aqui: <a href="http://hq.postman.i2p/">hq.postman.i2p</a>. Junto com isso temos <a href="/susimail/susimail">susimail</a>, um cliente anônimo de correio que se abre com o navegador web. Já est&aacute; configurado para o servício de Postman.<br>Tamb&eacute;n lhe recomendamos o nosso novo sistema de correio eletrônico sen servidor <a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a>, que existe em forma de um plugin. Vem com uma interface web e criptografa todas as mensagens de final a final.</li>
+ <li class="tidylist"><b>correio eletrônico anônimo</b> - Postman fez um sistema de correio eletrônico que é compatível com as aplicações de correio eletrônico comunes (POP3/SMTP), o qual permite de enviar correios eletrônicos tanto dentro de I2P como também receber e mandar correios desde a / para a internet. Pode registrar a sua conta aqui: <a href="http://hq.postman.i2p/">hq.postman.i2p</a>. Junto com isso temos <a href="/susimail/susimail">susimail</a>, um cliente anônimo de correio que se abre com o navegador web. Já est&aacute; configurado para o servício de Postman.<br>Tamb&eacute;m lhe recomendamos o nosso novo sistema de correio eletrônico sem servidor <a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a>, que existe em forma de um plugin. Vem com uma interface web e criptografa todas as mensagens de final a final.</li>
  <li class="tidylist"><b>bate-papo anônimo</b> - Lance o seu cliente IRC preferido e con&eacute;cte-se com o servidor anônimamente en 
      <b>127.0.0.1 porto 6668</b>.  Isto lhe levar&aacute; a um dos dois servidores anônimos de IRC oficiales em I2P 
-     - e nem você nem os outros usuários sabram quem é o outro, nem mesmo o administrador do servidor!</li>
- <li class="tidylist"><b>blogar anônimamente</b> - Experimente <a href="http://syndie.i2p2.de/">Syndie</a>!</li>
+     - e nem você nem os outros usuários sabrão quem é o outro, nem mesmo o administrador do servidor!</li>
+ <li class="tidylist"><b>blogar anônimamente</b> - Experimente com <a href="http://syndie.i2p2.de/">Syndie</a>!</li>
  <li class="tidylist">e muito mais</li>
 </ul>
 
@@ -47,20 +47,20 @@
    <code>eepsite/docroot/</code> (ou os servlets/jsp  
    <code>.war</code> em <code>eepsite/webapps</code>, scripts cgi
    em <code>eepsite/cgi-bin</code>) e já est&aacute; pronta a sua p&aacute;gina I2P.
-   Depois do inicio do <a href="/i2ptunnel/">t&uacute;nel da p&aacute;gina I2P</a>,
-   que conecta com o seu servidor, a sua p&aacute;gina I2P est&aacute; disponível para os outros. 
+   Depois do início do <a href="/i2ptunnel/">t&uacute;nel da p&aacute;gina I2P</a>
+   que conecta com o seu servidor a sua p&aacute;gina I2P est&aacute; disponível para os outros. 
    Instruções mais detalhadas sobre c&oacute;mo lançar a sua p&aacute;gina I2P podem encontrar-se 
    na <a href="http://127.0.0.1:7658/">sua p&aacute;gina I2P temporal</a>.
 </p>
 
 <h2><a name="trouble">Problemas</a></h2>
 
-<p>Seja paciente! Depois do primer arranque, I2P pode ainda ser devagar. 
-   Isto é devido ao fato de que o seu roteador I2P precisa de tempo para estabelecer coneções 
-   com outros roteadores I2P, tanto como para conhecer a rede. 
+<p>Seja paciente! Depois do primer início, I2P pode ainda ser devagar. 
+   Isto é devido ao fato de que o seu roteador I2P precisa de tempo tanto para estabelecer coneções 
+   com outros roteadores I2P como para conhecer a rede. 
    Se depois de trinta minutos o n&uacute;mero das suas coneções ativas (olhe ao lado esquerdo, embaixo de "participantes"!) 
-   ainda fica embaixo de dez, verifique que o porto que usa I2P est&aacute; aberto no seu muro corta-fogo, para ter uma conção melhor.
-   O porto que usa o sue roteador I2P (um porto aleatório escolhido na hora da instalação) se pode ver na 
+   ainda fica embaixo de dez, verifique que o porto que usa I2P est&aacute; aberto no seu muro corta-fogo para ter uma coneção melhor.
+   O porto que usa o seu roteador I2P (um porto aleatório escolhido na hora da instalação) se pode ver na 
    <a href="config.jsp">p&aacute;gina da configuração</a>.
    Se não pode acessar nenhuma p&aacute;gina I2P (nem mesmo
    <a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a>), certifique-se de que o seu navegador esteja usando o proxy que está em 
@@ -68,10 +68,10 @@
    Talvez quera ler as informações disponívels no 
    <a href="http://www.i2p2.i2p/index_de.html">site de I2P</a>, ler notícias e escrever no 
    <a href="http://forum.i2p2.de/">Foro de I2P</a> o 
-   venir saludá-nos no canal oficial em português 
+   vir saludá-nos no canal oficial em português 
    <a href="irc://127.0.0.1:6668/i2p-br">#i2p-br</a>, o canal oficial em inglês 
    <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, em 
-   <a href="irc://127.0.0.1:6668/i2p">#i2p</a> ou em <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>, 
+   <a href="irc://127.0.0.1:6668/i2p">#i2p</a> ou em <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a> - 
    todos nos servidores irc.postman.i2p e irc.freshcoffee.i2p. 
    (A ambos pode acessar baixo <a href="irc://localhost:6668">irc://localhost:6668</a>; os dois servidores estão conectados.) 
    Se você ainda não tem acesso a I2P, tamb&eacute;m pode entrar em #i2p e #i2p-help do servidor <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> - 
